# MUNINN-

./: .gitignore  BUGS.md  BUG_HOOKS_UNIVERSELS.md  CHANGELOG.md  CLAUDE.md  CODEBOOK.json  CODEBOOK_TREE.md  CUBE_YGG_QUERY.md  LICENSE  PLAN_PHASE0_TO_8.md  README.md  WINTER_TREE.md  forge.py  index.html  pyproject.toml
.claude/: settings.local.json
.claude/hooks/: bridge_hook.py  config_change_hook.py  notification_audit_hook.py  post_tool_failure_hook.py  post_tool_use_edit_log.py  pre_tool_use_bash_destructive.py  pre_tool_use_bash_secrets.py  pre_tool_use_edit_hardcode.py  subagent_start_hook.py
.claude/rules/: git.md  python.md
.github/workflows/: ci.yml
docs/: ANTI_BULLSHIT_BATTLE_PLAN.md  BASELINE_TIER1.txt  BATTLEPLAN_SCANNER.md  BENCHMARK_FULL_2026-03-07.md  BENCHMARK_HSBC.md  BENCHMARK_L9_2026-03-08.md  BENCHMARK_MYCELIUM.md  BRIEFING_CELLBIO_22BS.md  BRIEFING_RECONSTRUCTION_FRACTAL.md  BUG_META_MYCELIUM_SYNC.md  CHAINAGE.md  CLAUDE_CODE_LEAK_INTEL.md  CLAUDE_MD_RESEARCH.md  COUSIN_PROMPT_2026-05-01.md  CUBE_UX_HEATMAP_PLAN.md  FORMULES_ETRANGERES.md  HANDOFF_BATTLE_PLAN_2026-04-27.md  HANDOFF_CUBE_LIVE_TESTS.md  IMMUNE_FORMULAS.md  INDEX.md  LITERATURE.md  PLAN_BATAILLE_BIOVECTORS.md  PLAN_BATAILLE_TIER1.md  PROMPT_AUDIT_V5.md  PROMPT_AUDIT_V6.md  PROMPT_AUDIT_V9.md  PROMPT_V9A_REGEN.md  PROMPT_YGG_FORMULAS.md  PROMPT_YGG_FORMULAS_RETOUR.md  PROMPT_YGG_GLYPHES_WT2.md  RECHERCHE_WEB_PISTES.md  SCALING_NOTES.md  SCAN_MUNINN_YGG.md  SESSION_2026-03-07.md  SHOPPING_LIST.md  SOL_TEMPLATE.md  SYSTEM_MAP.md  TIER1_SUMMARY.md  TIER2_SUMMARY.md  TIER3_PLAN.md  (+7 more)
engine/core/: _secrets.py  alphabet.md  alphabet_v1.json  analyze_memory.py  budget.md  budget_select.py  build_alphabet.py  codebook_v0.md  cube.py  cube_analysis.py  cube_providers.py  forge.py  lang_lexicons.py  lexicons.py  muninn.py  muninn_codec.py  muninn_feed.py  muninn_layers.py  muninn_tree.py  mycelium.py  mycelium_db.py  rules.md  sentiment.py  sync_backend.py  sync_tls.py  tokenizer.py  vault.py  wal_monitor.py  watchdog.py
memory/: b00.mn  b0002.mn  b01.mn  b02.mn  b03.mn  b04.mn  b05.mn  b06.mn  b07.mn  root.mn  tree.json
muninn/: __init__.py  __main__.py  _engine.py  _secrets.py  budget_select.py  cube.py  cube_analysis.py  cube_providers.py  dedup.py  forge.py  lexicons.py  muninn_feed.py  muninn_layers.py  muninn_tree.py  mycelium.py  mycelium_db.py  sentiment.py  sync_backend.py  sync_tls.py  tokenizer.py  vault.py  wal_monitor.py  watchdog.py
muninn/ui/: __init__.py  navi.py  (+21 more)
tests/: LANCER_BATTERIE.md  PROMPT_BATTERY_V2.md  PROMPT_BATTERY_V3_PART1.md  PROMPT_BATTERY_V3_PART2.md  PROMPT_BATTERY_V3_PART3.md  RESULTS_BATTERY_V3.md  RESULTS_BATTERY_V4.md  RESULTS_SENIOR_BATTERY.md  audit_failed_cubes.py  audit_full_report.py  audit_metrics.py  bat_cat1.py  bat_cat11_14.py  bat_cat2_3.py  bat_cat4.py  bat_cat5_7.py  bat_cat8_10.py  bench_n_tokens.py  conftest.py  eval_harness_chunk11.py  eval_harness_chunk9.py  muninn_test_intelligence.py  run_battery_senior.py  run_cat1.py  run_cat11_14.py  run_cat1_fix.py  run_cat2_3.py  run_cat4.py  run_cat4_fix.py  run_cat5.py  run_cat5_10.py  run_cat6_7.py  run_cat8_10.py  run_convergence.py  run_cube_corpus.py  run_full_pipeline.py  run_local_btree.py  run_local_cube.py  run_retest_t21_t32.py  run_sanity_btree.py  (+179 more)
(+156 files in other folders)
